--- a/django_by_example_book/01_Building_a_blog_application/blog/static/blog.css
+++ b/django_by_example_book/01_Building_a_blog_application/blog/static/blog.css
@@ -24,6 +24,14 @@ h2 {
     float: left;
     width: 60%;
     padding: 0 0 0 30px;
+    overflow-wrap: break-word;
+}
+
+#post-block {
+    background: #eee;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
 }
 
 #sidebar {
