--- a/django_by_example_book/01_Building_a_blog_application/blog/templates/blog/base.html
+++ b/django_by_example_book/01_Building_a_blog_application/blog/templates/blog/base.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <link rel="stylesheet" href="{% static "blog.css" %}">
 </head>
 <body>
     <div id="content">
-        {% block content %}
-
-        {% endblock content %}
+        {% block content %}{% endblock %}
     </div>
     <div id="sidebar">
         <h2>My Blog</h2>
