--- a/django_by_example_book/01_Building_a_blog_application/blog/templates/blog/post/list.html
+++ b/django_by_example_book/01_Building_a_blog_application/blog/templates/blog/post/list.html
@@ -2,12 +2,24 @@
 {% block title %}My Blog{% endblock %}
 {% block content %}
   <h1>My Blog</h1>
+  {% if tag %}
+    <h2>Posts tagged with "{{ tag.name }}"</h2>
+  {% endif %}
   {% for post in posts %}
     <div id="post-block">
       <h2>
       <a href="{{ post.get_absolute_url }}">
         {{ post.title }}
       </a>
+      <p class="tags">
+        Tag: 
+        {% for tag in post.tags.all %}
+          <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+            {{ tag.name }}
+          </a>
+          {% if not forloop.last %},{% endif %}
+        {% endfor %}
+      </p>
     </h2>
     <p class="date">
       Published {{ post.publish }} by {{ post.author }}
@@ -15,5 +27,5 @@
     {{ post.body|truncatewords:30|linebreaks }}
     </div>
    {% endfor %}
-  {% include "pagination.html" with page=page_obj %}
+  {% include "pagination.html" with page=posts %}
 {% endblock %}
