--- a/django_by_example_book/01_building_blog/blog/templates/blog/base.html
+++ b/django_by_example_book/01_building_blog/blog/templates/blog/base.html
@@ -18,6 +18,16 @@
         <p>This is my blog. I've written<span style="font-weight: 600"> {% total_posts %}</span> posts so far.</p>
         <h3>Latest Posts</h3>
         {% show_latest_posts 3 %}
+        <h3>Most Commented Posts</h3>
+        {% get_most_commented_posts as most_commented_posts %}
+        <ul>
+            {% for post in most_commented_posts %}
+                <li>
+                    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+        <p><a href="{% url 'blog:post_feed' %}">Subscribe to my RSS feed</a></p>
     </div>
 </body>
 </html>
