--- a/django_by_example_book/02_Social_website/account/templates/account/dashboard.html
+++ b/django_by_example_book/02_Social_website/account/templates/account/dashboard.html
@@ -2,5 +2,8 @@
 {% block title %}Dashboard{% endblock title %}
 {% block content %}
     <h1>Dashboard</h1>
-    <p>Welcome to your dashboard.</p>
+    <p>
+        Welcome to your dashboard. You can <a href="{% url 'edit' %}">Edit Your Profile</a>
+        or <a href="{% url 'password_change' %}">Change your password</a>. 
+    </p>
 {% endblock content %}
