--- a/insurance/guest_registeration/templates/guest_registeration/detail.html
+++ b/insurance/guest_registeration/templates/guest_registeration/detail.html
@@ -1,25 +1,53 @@
 {% extends 'guest_registeration/base.html' %}
 {% block title %}{{ guest.fullname }} Details{% endblock title %}
 {% block content %}
-    <div class="row">
-        <div class="col-md-6"><h1 class="text-info">Guest Name:</h1></div>
-        <div class="col-md-6"><h1>{{ guest.fullname }}</h1></div>
-    </div>
-    <div class="row">
-        <div class="col-md-6"><h1 class="text-info">Mobile:</h1></div>
-        <div class="col-md-6"><h1>{{ guest.mobile }}</h1></div>
-    </div>
-    <div class="row">
-        <div class="col-md-6"><h1 class="text-info">Insurance Company:</h1></div>
-        <div class="col-md-6"><h1>{{ guest.insurance_company }}</h1></div>
-    </div>
-    <div class="row">
-        <div class="col-md-6"><h1 class="text-info">Dispensing Pharmacy:</h1></div>
-        <div class="col-md-6"><h1>{{ guest.dispensing_pharmacy }}</h1></div>
-    </div>
+    <ul class="list-group">
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-md-6"><h3 class="text-info">Guest Name:</h3></div>
+                <div class="col-md-6"><h3>{{ guest.fullname }}</h3></div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-md-6"><h3 class="text-info">Mobile:</h3></div>
+                <div class="col-md-6"><h3>{{ guest.mobile }}</h3></div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-md-6"><h3 class="text-info">Insurance Company:</h3></div>
+                <div class="col-md-6"><h3>{{ guest.insurance_company }}</h3></div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-md-6"><h3 class="text-info">Dispensing Pharmacy:</h3></div>
+                <div class="col-md-6"><h3>{{ guest.dispensing_pharmacy }}</h3></div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-md-6"><h3 class="text-info">Dispensing Pharmacist:</h3></div>
+                <div class="col-md-6"><h3>{{ guest.dispensing_pharmacist }}</h3></div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-md-6"><h3 class="text-info">Dispensing Date:</h3></div>
+                <div class="col-md-6"><h3>{{ guest.dipensing_date|date:"d-m-Y" }}</h3></div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-md-6"><h3 class="text-info">Next Dispensing:</h3></div>
+                <div class="col-md-6"><h3>{{ guest.next_dispensing|date:"d-m-Y" }}</h3></div>
+            </div>
+        </li>
+    </ul>
     <div class="row">
         <div class="col-md 12">
-            <a href="{% url 'guest_registeration:guest_list' %}" class="btn btn-secondary btn-block btn-lg mt-5">
+            <a href="{% url 'guest_registeration:guest_list' %}" class="btn btn-secondary btn-block btn-lg mt-3">
                 Guest List <i class="fas fa-stream ml-2"></i>
             </a>
         </div>
