--- a/insurance/users/templates/users/login.html
+++ b/insurance/users/templates/users/login.html
@@ -1,16 +1,16 @@
 {% extends 'guest_registeration/base.html' %}
 {% load crispy_forms_tags %}
-{% block title %}Register New Users{% endblock title %}
+{% block title %}Login{% endblock title %}
 {% block content %}
     <form action="" method="post" autocomplete="off">
-        <legend class="border-bottom mb-4">Sign Up</legend>
+        <legend class="border-bottom mb-4">Login</legend>
         {{ form|crispy }}
-        <button type="submit" class="btn btn-success btn-lg">Sign Up</button>
+        <button type="submit" class="btn btn-success btn-lg">Login</button>
         {% csrf_token %}
     </form>
     <div class="border-top pt-3 mt-3">
         <small class="text-muted">
-            Already Have An Account? <a class="ml-2" href="{% url 'users:login' %}">Sign In</a>
+            Need An Account? <a class="ml-2" href="{% url 'users:register_users' %}">Sign Up Now</a>
         </small>
     </div>
 {% endblock content %}
