--- a/insurance/guest_registeration/templates/guest_registeration/base.html
+++ b/insurance/guest_registeration/templates/guest_registeration/base.html
@@ -36,7 +36,10 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
-                        <li class="nav-item">
+                        <li class="nav-item">                            
+                            <a class="nav-link" href="{% url 'users:profile' %}">Profile</a>
+                        </li>
+                        <li class="nav-item">                            
                             <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
                         </li>
                     {% else %}
