--- a/insurance/guest_registeration/templates/guest_registeration/detail.html
+++ b/insurance/guest_registeration/templates/guest_registeration/detail.html
@@ -26,12 +26,12 @@
                 <div class="col-md-6"><h3>{{ guest.dispensing_pharmacy }}</h3></div>
             </div>
         </li>
-        <li class="list-group-item">
+        {% comment %} <li class="list-group-item">
             <div class="row">
                 <div class="col-md-6"><h3 class="text-info">Dispensing Pharmacist:</h3></div>
                 <div class="col-md-6"><h3>{{ guest.dispensing_pharmacist }}</h3></div>
             </div>
-        </li>
+        </li> {% endcomment %}
         <li class="list-group-item">
             <div class="row">
                 <div class="col-md-6"><h3 class="text-info">Dispensing Date:</h3></div>
