--- a/insurance/users/templates/users/profile.html
+++ b/insurance/users/templates/users/profile.html
@@ -2,33 +2,73 @@
 {% load crispy_forms_tags %}
 {% block title %}{{ user.profile }}{% endblock title %}
 {% block content %}
-    <h1>{{ user.profile }}</h1>
-        <form action="" method="post" autocomplete="off">
-            {% csrf_token %}
-            <div class="row">
-                <div class="col-md-6">{{ form.name|as_crispy_field }}</div>
-                <div class="col-md-6">{{ form.emp_code|as_crispy_field }}</div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <button type="submit" class="btn btn-success btn-block">Submit</button> 
+
+    <div class="row">
+        <div class="col-md-9"><h1>{{ user.profile }}</h1></div>
+        <div class="col-md-3">
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary mt-2" data-toggle="modal" data-target="#addPharmacist">
+                Add New Pharmacist 
+            </button>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="addPharmacist" tabindex="-1" role="dialog" aria-labelledby="addPharmacistTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addPharmacistTitle">Add Pharmacist</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="" method="post" autocomplete="off">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-md-6">{{ form.name|as_crispy_field }}</div>
+                            <div class="col-md-6">{{ form.emp_code|as_crispy_field }}</div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Add</button>
+                        </div>
+                    </form>
                 </div>
             </div>
-        </form>
-        <hr>
-        <div class="row">
-            <ul class="list-group">
-                {% for pharmacist in pharmacists %}
-                    <li class="list-group-item">
-                        {{ pharmacist.name }} ({{ pharmacist.emp_code }}) 
-                        <form class="d-inline" action="{% url 'users:pharmacist_delete' pharmacist.id %}" method="post">
-                            {% csrf_token %}
-                            <button type="submit" class="btn">
-                                <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
-                            </button>
-                        </form>
-                    </li>
-                {% endfor %}
-            </ul>
         </div>
+    </div>
+
+    <ul class="list-group">
+        {% for pharmacist in pharmacists %}
+            <li class="list-group-item">
+                <div class="row">
+                    <div class="col-md-10 mt-2">{{ pharmacist.name }} ({{ pharmacist.emp_code }})</div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn text-right" data-toggle="modal" data-target="#delete_pharmacist">
+                            <i class="far fa-trash-alt fa-lg text-danger"></i>
+                        </button>
+                    </div>
+                </div>
+                
+                <div class="modal fade" id="delete_pharmacist" tabindex="-1" role="dialog" aria-labelledby="delete_pharmacist_title" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable" role="document">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <p class="">Are you sure you want to delete this crew member?</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <form class="d-inline" action="{% url 'users:pharmacist_delete' pharmacist.id %}" method="post">
+                                    {% csrf_token %}                            
+                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                </form>                                        
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock content %}
