allowing user to add medication

--- a/insurance/guest_registeration/templates/guest_registeration/register.html
+++ b/insurance/guest_registeration/templates/guest_registeration/register.html
@@ -7,7 +7,8 @@
         {{ form.fullname|as_crispy_field }}
         {{ form.mobile|as_crispy_field }}
         {{ form.insurance_company|as_crispy_field }}
-        {{ form.dispensing_pharmacy|as_crispy_field }}
+        {% comment %} {{ form.dispensing_pharmacy|as_crispy_field }} {% endcomment %}
+        {% comment %} {{ form.dispensing_pharmacist|as_crispy_field }} {% endcomment %}
         <div class="row">
             <div class="col-md-4">{{ form.dipensing_date|as_crispy_field }}</div>
             <div class="col-md-8">{{ form.next_dispensing|as_crispy_field }}</div>
