--- a/insurance/guest_registeration/templates/guest_registeration/detail.html
+++ b/insurance/guest_registeration/templates/guest_registeration/detail.html
@@ -1,6 +1,14 @@
 {% extends 'guest_registeration/base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}{{ guest.fullname }} Details{% endblock title %}
 {% block content %}
+    <div class="row mb-2">
+        <div class="col-md 12">
+            <a href="{% url 'guest_registeration:guest_list' %}" class="btn btn-secondary btn-block btn-lg mt-3">
+                Back To Guest List <i class="fas fa-stream ml-2"></i>
+            </a>
+        </div>
+    </div>
     <ul class="list-group">
         <li class="list-group-item">
             <div class="row">
@@ -23,7 +31,7 @@
         <li class="list-group-item">
             <div class="row">
                 <div class="col-md-6"><h3 class="text-info">Dispensing Pharmacy:</h3></div>
-                <div class="col-md-6"><h3>{{ guest.dispensing_pharmacy }}</h3></div>
+                <div class="col-md-6"><h3>{{ user.profile }}</h3></div>
             </div>
         </li>
         {% comment %} <li class="list-group-item">
@@ -45,12 +53,76 @@
             </div>
         </li>
     </ul>
-    <div class="row">
-        <div class="col-md 12">
-            <a href="{% url 'guest_registeration:guest_list' %}" class="btn btn-secondary btn-block btn-lg mt-3">
-                Guest List <i class="fas fa-stream ml-2"></i>
-            </a>
+    
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary mt-2 mb-2 btn-block btn-lg" data-toggle="modal" data-target="#addDrug">
+        Add New Medicine 
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="addDrug" tabindex="-1" role="dialog" aria-labelledby="addDrugTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addDrugTitle">Add Medication</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="" method="post" autocomplete="off">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-md-6">{{ med_form.name|as_crispy_field }}</div>
+                            <div class="col-md-6">{{ med_form.dose|as_crispy_field }}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">{{ med_form.frequency|as_crispy_field }}</div>
+                            <div class="col-md-6">{{ med_form.quantity|as_crispy_field }}</div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Add</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     
+    <ul class="list-group">
+        {% for drug in drugs %}
+            <li class="list-group-item">
+                <div class="row">
+                    <div class="col-md-10">
+                        {{ drug.name }} - {{ drug.dose }} - {{ drug.frequenc }}  {{ drug.quantity }} box{{ drug.quantity|pluralize }}
+                    </div>
+
+                    <div class="col-md-2">
+                        <button type="submit" class="btn" data-toggle="modal" data-target="#delete_medicine">
+                            <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
+                        </button>
+                    </div>
+                </div>
+                
+                <div class="modal fade" id="delete_medicine" tabindex="-1" role="dialog" aria-labelledby="delete_guest_title" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable" role="document">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <p class="">Are you sure you want to delete this medicine?</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <form class="d-inline" action="#" method="post">
+                                    {% csrf_token %}                            
+                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                </form>                                        
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock content %}
