--- a/insurance/guest_registeration/templates/guest_registeration/guest_list.html
+++ b/insurance/guest_registeration/templates/guest_registeration/guest_list.html
@@ -24,17 +24,30 @@
                     </td>
                     <td>{{ guest.mobile }}</td>
                     <td>{{ guest.insurance_company }}</td>
-                    <td>{{ guest.dispensing_pharmacy }}</td>
+                    <td>{{ user.profile }}</td>
                     <td>
                         <a href="{% url 'guest_registeration:guest_update' guest.id %}" class="btn text-secondary">
                             <i class="far fa-edit fa-lg"></i>
                         </a>
-                        <form class="d-inline" action="{% url 'guest_registeration:guest_delete' guest.id %}" method="post">
-                            {% csrf_token %}
-                            <button type="submit" class="btn">
-                                <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
-                            </button>
-                        </form>
+                        <button type="submit" class="btn" data-toggle="modal" data-target="#delete_guest">
+                            <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
+                        </button>
+                        <div class="modal fade" id="delete_guest" tabindex="-1" role="dialog" aria-labelledby="delete_guest_title" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-scrollable" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-body">
+                                        <p class="">Are you sure you want to delete this guest?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <form class="d-inline" action="{% url 'guest_registeration:guest_delete' guest.id %}" method="post">
+                                            {% csrf_token %}                            
+                                            <button type="submit" class="btn btn-danger">Delete</button>
+                                        </form>                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </td>
                 </tr>
             {% endfor %}
