--- a/insurance/guest_registeration/templates/guest_registeration/detail.html
+++ b/insurance/guest_registeration/templates/guest_registeration/detail.html
@@ -31,15 +31,15 @@
         <li class="list-group-item">
             <div class="row">
                 <div class="col-md-6"><h3 class="text-info">Dispensing Pharmacy:</h3></div>
-                <div class="col-md-6"><h3>{{ user.profile }}</h3></div>
+                <div class="col-md-6"><h3>{{ guest.dispensing_pharmacy }}</h3></div>
             </div>
         </li>
-        {% comment %} <li class="list-group-item">
+        <li class="list-group-item">
             <div class="row">
                 <div class="col-md-6"><h3 class="text-info">Dispensing Pharmacist:</h3></div>
                 <div class="col-md-6"><h3>{{ guest.dispensing_pharmacist }}</h3></div>
             </div>
-        </li> {% endcomment %}
+        </li>
         <li class="list-group-item">
             <div class="row">
                 <div class="col-md-6"><h3 class="text-info">Dispensing Date:</h3></div>
