--- a/insurance/guest_registeration/templates/guest_registeration/guest_list.html
+++ b/insurance/guest_registeration/templates/guest_registeration/guest_list.html
@@ -24,11 +24,11 @@
                     </td>
                     <td>{{ guest.mobile }}</td>
                     <td>{{ guest.insurance_company }}</td>
-                    <td>{{ user.profile }}</td>
+                    <td>{{ guest.dispensing_pharmacy }}</td>
                     <td>
-                        <a href="{% url 'guest_registeration:guest_update' guest.id %}" class="btn text-secondary">
+                        {% comment %} <a href="{% url 'guest_registeration:guest_update' guest.id %}" class="btn text-secondary">
                             <i class="far fa-edit fa-lg"></i>
-                        </a>
+                        </a> {% endcomment %}
                         <button type="submit" class="btn" data-toggle="modal" data-target="#delete_guest">
                             <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
                         </button>
