--- a/JustDjango_Blog/templates/header.html
+++ b/JustDjango_Blog/templates/header.html
@@ -30,7 +30,7 @@
               </li>
               <li class="nav-item"><a href="{% url 'blog' %}" class="nav-link active ">Blog</a>
               </li>
-              <li class="nav-item"><a href="{% url 'post' %}" class="nav-link ">Post</a>
+              <li class="nav-item"><a href="#" class="nav-link ">Post</a>
               </li>
               <li class="nav-item"><a href="#" class="nav-link ">Contact</a>
               </li>
