--- a/resturant/Resturant/src/templates/base.html
+++ b/resturant/Resturant/src/templates/base.html
@@ -37,7 +37,7 @@
             <li class="active"><a href="{% url 'meals:meals_list' %}">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="menu.html">Our Menu</a></li>
-            <li><a href="blog.html">Our Blog</a></li>
+            <li><a href="{% url 'blog:post_list' %}">Our Blog</a></li>
             <li><a href="{% url 'reservation:reserve_table' %}">Reserve A Table</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
