--- a/resturant/Resturant/src/blog/templates/blog/post_list.html
+++ b/resturant/Resturant/src/blog/templates/blog/post_list.html
@@ -19,90 +19,21 @@
     <div class="container">
       
       <div class="row mb-5">
-        <div class="col-md-4">
-          <div class="media d-block media-bg-white mb-5" data-aos="fade-up"  data-aos-delay="400">
-            <figure>
-              <a href="blog-single.html"><img src="img/news_2.jpg" alt="Image placeholder" class="img-fluid"></a>
-            </figure>
-            <div class="media-body">
-              <h3><a href="blog-single.html">Food that are best for your overall health</a></h3>
-              <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-              <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-            </div>
-          </div> <!-- .media -->
-        </div>
-        <div class="col-md-4">
-          
-          <div class="media d-block media-bg-white mb-5" data-aos="fade-up"  data-aos-delay="400">
-            <figure>
-              <a href="blog-single.html"><img src="img/news_1.jpg" alt="Image placeholder" class="img-fluid"></a>
-            </figure>
-            <div class="media-body">
-              <h3><a href="blog-single.html">Food that are best for your overall health</a></h3>
-              <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-              <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-            </div>
-          </div> <!-- .media -->
-
-        </div>
-        <div class="col-md-4">
-          <div class="media d-block media-bg-white mb-5" data-aos="fade-up"  data-aos-delay="400">
-            <figure>
-              <a href="blog-single.html"><img src="img/img_1.jpg" alt="Image placeholder" class="img-fluid"></a>
-            </figure>
-            <div class="media-body">
-              <h3><a href="blog-single.html">Food that are best for your overall health</a></h3>
-              <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-              <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-            </div>
-          </div> <!-- .media -->
-        </div>
-
-        <div class="col-md-4">
-          <div class="media d-block media-bg-white mb-5" data-aos="fade-up"  data-aos-delay="400">
-            <figure>
-              <a href="blog-single.html"><img src="img/img_3.jpg" alt="Image placeholder" class="img-fluid"></a>
-            </figure>
-            <div class="media-body">
-              <h3><a href="blog-single.html">Food that are best for your overall health</a></h3>
-              <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-              <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-            </div>
-          </div> <!-- .media -->
-        </div>
-        <div class="col-md-4">
-          
-          <div class="media d-block media-bg-white mb-5" data-aos="fade-up"  data-aos-delay="400">
-            <figure>
-              <a href="blog-single.html"><img src="img/img_2.jpg" alt="Image placeholder" class="img-fluid"></a>
-            </figure>
-            <div class="media-body">
-              <h3><a href="blog-single.html">Food that are best for your overall health</a></h3>
-              <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-              <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-            </div>
-          </div> <!-- .media -->
-
-        </div>
-        <div class="col-md-4">
-          <div class="media d-block media-bg-white mb-5" data-aos="fade-up"  data-aos-delay="400">
-            <figure>
-              <a href="blog-single.html"><img src="img/img_1.jpg" alt="Image placeholder" class="img-fluid"></a>
-            </figure>
-            <div class="media-body">
-              <h3><a href="blog-single.html">Food that are best for your overall health</a></h3>
-              <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
-              <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-            </div>
-          </div> <!-- .media -->
-        </div>
-
+        {% for post in post_list %}
+          <div class="col-md-4">
+            <div class="media d-block media-bg-white mb-5" data-aos="fade-up"  data-aos-delay="400">
+              <figure>
+                <a href="blog-single.html"><img src="{{ post.image.url }}" alt="Image placeholder" class="img-fluid"></a>
+              </figure>
+              <div class="media-body">
+                <h3><a href="{% url 'blog:post_detail' post.id %}">{{ post.title }}</a></h3>
+                <p class="post-meta"><span><span class="fa fa-calendar"></span> {{ post.created|date:"d M Y" }}</span></p>
+                <p class="mb-4">{{ post.content }}</p>
+                <p><a href="{% url 'blog:post_detail' post.id %}" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
+              </div>
+            </div> <!-- .media -->
+          </div>
+        {% endfor %}
       </div>
 
       <div class="row">
