--- a/resturant/Resturant/src/blog/templates/blog/post_detail.html
+++ b/resturant/Resturant/src/blog/templates/blog/post_detail.html
@@ -62,7 +62,7 @@
               <h3 class="mb-5">Leave a comment</h3>
               <form action="." class="p-5 bg-light" method="post">
                 {% csrf_token %}
-                {{ comment_form }}
+                {{ comment_form.content|as_crispy_field }}
                 {% comment %} <div class="form-group">
                   <label for="name">Name *</label>
                   <input type="text" class="form-control" id="name">
